style.css
/* ... */
.navbar a:hover {
  color: #88b0bf;                   /* Change link color on hover */
}

/* Sections */
section {
  padding: 10px;                      /* Padding for sections */
  border-bottom: 0px solid #371616; /* Bottom border for sections */
}

p {
  font-size: 20px;                    /* Paragraph font size */
  line-height: 2;                     /* Double spacing */
  text-align: justify;                /* Justify text */
}
.highlight {
  font-size: 24px;                    /* Larger font size */
  font-weight: bold;                  /* Bold font*/
}

/* Flex container */
.container {
  display: flex;                      /* Flex container */
  justify-content: center;     /* Space items evenly */
  align-items: center;                /* Center items vertically */
}

/* Half-width box */
.box_half {
  width: 45%;                         /* 45% width */
  padding: 20px;                      /* Padding for content */
  border: 1px solid #ccc;           /* Border */
  box-sizing: border-box;             /* Include padding and border in box sizing */
}

/* Half-width image container */
.image_half {
  width: 45%;                         /* 45% width */
  height: 100%;                       /* Full height */
}

.image_half img {
  width: 100%;                        /* Full width */
  height: 100%;                       /* Full height */
  object-fit: cover;                  /* Cover image */
}

/* Full-width image container */
.image_all {
  width: 100%;                        /* Full width */
  height: 100%;                       /* Full height */
  justify-content: center;            /* Center content horizontally */
}

/* Half-width box without border */
.no_box_half {
  width: 50%;                         /* 50% width */
  padding: 20px;                      /* Padding for content */
  border: 0px solid #ccc;           /* No border */
  box-sizing: border-box;             /* Include padding and border in box sizing */
}

/* Justified text */
.justified {
  text-align: justify;                /* Justify text */
}

/* Margin between containers */
.container + .container {
  margin-top: 40px;                   /* Margin between containers */
}

/* Bottom-aligned container */
.container_bottom {
  display: flex;                      /* Flex container */
  justify-content: space-between;     /* Space items evenly */
  align-items: flex-end;              /* Align items to the bottom */
}

.spacer {
  height: 50px; /* Adjust the height as needed */
}

.legend {
  font-family: Arial, sans-serif;
  font-size: 14px;
}

.legend-circle {
  /* float: left; */
  display: inline-block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  margin-right: 5px;
}

.dot {
  fill: steelblue;
}

.tooltip {
  position: absolute;
  background: rgba(0, 0, 0, 0.8);
  color: white;
  padding: 5px;
  border-radius: 5px;
  pointer-events: none;
  opacity: 0;
  transition: opacity 0.3s ease;
}

.chart-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 700px; /* Adjust width as needed */
}

.wide-chart-container {
  display: flex;
  justify-content: space-between;
  width: 1200px; /* Adjust width as needed */
}

.chart {
  flex: 1;
  margin: 10px;
}

/* Ordered list */
ol {
  font-size: inherit;     /* Use the font size inherited from the parent */
}
ol li {
  line-height: 2;         /* Double spacing between list items */
}

/* Full-width image container */
.image_full {
  width: 100%;            /* Take up the full width of its container */
  height: auto;           /* Maintain aspect ratio */
  margin-bottom: 20px;    /* Add some space between this and other elements */
  margin-top: 20px;       /* Add some space between this and other elements */
  text-align: center;     /* Center the image horizontally */
}
.image_full img {
  width: 70%;             /* Ensure the image takes up the full width of the container */
  height: auto;           /* Maintain aspect ratio */
}
/* Figure captions */
.image_full figcaption {
  font-family: Georgia, sans-serif;   /* Font style for caption*/
  font-size: 10px;                    /* Font size for caption*/
  text-align: left;                   /* Align left */
  margin-top: 5px;                    /* Spacing with top*/
  margin-left: 15%;                   /* Adjust margin to start from the left of the image */
  display: block;
}

/* Image for interactive 4 municipalities */

img {
  width: 100%; 
  cursor: pointer; /* Shows a pointer cursor on hover */
}
.image-container {
  display: flex;
  flex-direction: column; /* Stacks children (image and description) vertically */
  align-items: center; /* Centers children horizontally */
  width: 45%; /* Adjust as necessary based on layout */
  margin: 20px; /* Space around each image container */
}

.description {
  text-align: justify; /* Ensures text is centered below the image */
  margin-top: 10px; /* Space between image and text */
  padding: 10px; /* Padding around the text */
  background-color: #f4f4f4; /* Optional: for better visibility */
  width: 100%; /* Takes full width of its container */
  box-sizing: border-box; /* Ensures padding doesn't affect width */
}
/* ... */

